tinkering in class rmd

--- a/martah_PeerCommentary_vfrench3_03.Rmd
+++ b/martah_PeerCommentary_vfrench3_03.Rmd
@@ -242,5 +242,4 @@ V: I used nrow within the sample function instead of zombie$id and then exactly 
 
 5. The for loooooooooooooops :,( ok honestly not hat bad I put this here preemptivly thinking they would be harder lol. However, idk how to put in my own sample and enforce the replace = f because there's a good chance those people were picked again during the for loop since I put them in after replace = false. If I put it group1 first and have `i in 2:k` where k = 100 would that work?
 
-V: so whn you set replace= false for the sampling. That just means when you sample the 30 items none of those 30 items are going to be replicates. At the beginning of each sample taken it starts from the entire pool again (aka the 30 you took in the first sample will be able to be sampled again). So I think you are over thinking this. The way you did it should be okay. I would ask Mel or Chris to be safe though. If you think about it mathematically 30 * 99 is almost 3000 so we would run out of survivors from the original 1000 if we were sampling without replacement for eeach sample? 
-
+V: so whn you set replace= false for the sampling. That just means when you sample the 30 items none of those 30 items are going to be replicates. At the beginning of each sample taken it starts from the entire pool again (aka the 30 you took in the first sample will be able to be sampled again). So I think you are over thinking this. The way you did it should be okay. I would ask Mel or Chris to be safe though. If you think about it mathematically 30 * 99 is almost 3000 so we would run out of survivors from the original 1000 if we were sampling without replacement for each sample? 
